--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
