--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.0.2",
     "cloudinary": "^2.5.1",
+    "mapbox-gl": "^3.8.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
+    "photoswipe": "^5.4.4",
+    "photoswipe-react": "^0.2.0",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0-rc-69d4b800-20241021",
+    "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.3.0",
+    "react-map-gl": "^7.1.7",
+    "react-photoswipe-gallery": "^3.0.2",
+    "react-share": "^5.1.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
